--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^8.31.0",
     "prisma": "^4.8.1",
+    "prisma-dbml-generator": "^0.10.0",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
